--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 
   <div class="order-summary jumbotron">
     <h4> Thank you for your order! </h4>
-    <h4> Invoice sent to <%= @order.email %> </h4>
+    <h4> Invoice sent to <%= @user_email %> </h4>
   </div>
 
   <div class="panel panel-default items">
