Created Review model and controller; implemented basic Review rendering on Product Details page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,4 +28,13 @@
 
   </article>
 
+  <div class="row product-reviews">
+    <div class="col-sm-8">
+      <br>
+      <%= render @product.reviews %>
+    </div>
+  </div>
+
+  <%= console %>
+
 </section>
